Add Bourbon, Neat and Bitters

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,8 @@
 ---
-title: Welcome to Middleman
+title: Page Title
 ---
 
 <div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+  <h1>Page Title</h1>
+  <p>Paragraph</p>
+</div>
