Add Refills as option

--- a/source/assets/stylesheets/all.css.scss
+++ b/source/assets/stylesheets/all.css.scss
@@ -1,4 +1,9 @@
 @import "normalize";
+
+// Bourbon Suite
 @import "bourbon";
 @import "neat";
 @import "base/base";
+//@import "refills";
+
+@import "global";
