Add jQuery from CDN

--- a/source/layouts/application.html.haml
+++ b/source/layouts/application.html.haml
@@ -8,5 +8,4 @@
 
   %body{class: page_classes}
     = yield
-
-    = javascript_include_tag  "all"
+    = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "all"
