--- a/source/layouts/application.html.haml
+++ b/source/layouts/application.html.haml
@@ -4,8 +4,8 @@
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge,chrome=1", http: {equiv: "X-UA-Compatible"}}
     %title= current_page.data.title || "The Middleman"
-    = stylesheet_link_tag "all"
+    = stylesheet_link_tag "application"
 
   %body{class: page_classes}
     = yield
-    = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "all"
+    = javascript_include_tag "https://code.jquery.com/jquery-2.1.1.min.js", "application"
