Add welcome page

--- a/source/assets/stylesheets/_global.css.scss
+++ b/source/assets/stylesheets/_global.css.scss
@@ -1,3 +1,20 @@
 body {
-  background: $light_gray;
+  background: $light-gray;
+  color: $medium-gray;
+}
+
+.delete-me {
+  @include align-items(center);
+  @include display(flex);
+  @include justify-content(center);
+  height: 100vh;
+
+  .container {
+    text-align: center;
+
+    h1 {
+      font-weight: 200;
+    }
+  }
+
 }
