--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -2,6 +2,10 @@
 title: Page Title
 ---
 
-.welcome
-  %h1 Page Title
-  %p Welcome
+.delete-me
+  .container
+    %h1 Proteus
+    %p
+      You're all set!
+      <a href="http://github.com/thoughtbot/proteus-middleman">Let's get started</a>
+      building your prototype.
