--- a/source/layouts/application.html.haml
+++ b/source/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{charset: "utf-8"}
     %meta{content: "IE=edge,chrome=1", http: {equiv: "X-UA-Compatible"}}
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     %title= current_page.data.title || "The Middleman"
     = stylesheet_link_tag "application"
 
